Improve GitHub Issue and PR templates with structured diagnostics and actionable content